# Open3DBench

./: .gitignore  README.md
OpenROAD-3D/: .gitignore  .gitmodules  README.md
OpenROAD-3D/flow/: Makefile  final.csv  output_time_data.csv  run_2D_dmp.sh  run_2D_mp.sh  run_3D.sh  run_dmp_all.sh  run_mp_all.sh
Place-3D/: .gitmodules  README.md  run_2D.sh  run_2D_all.sh  run_3D.sh  run_3D_all.sh  run_3D_tiling.sh
Place-3D/dreamplace/: NonLinearPlace.py  Partitioner.py  PlaceDB.py  Placer.py  Placer_3D.py  Placer_3D_heuristic.py  Placer_macro3D.py  TPGNN.py  test.py  (+3 more)
Place-3D/test/: CMakeLists.txt
Place-3D/test/iccad2015.ot/: simple.json
Place-3D/test/or_2D/: ariane133_2D.json  ariane136_2D.json  bp_2D.json  bp_be_2D.json  bp_fe_2D.json  bp_multi_2D.json  bp_quad_2D.json  swerv_wrapper_2D.json  tinyRocket_2D.json
Place-3D/test/or_2D_mp/: ariane133_2D_mp.json  ariane136_2D_mp.json  bp_2D_mp.json  bp_be_2D_mp.json  bp_fe_2D_mp.json  bp_multi_2D_mp.json  bp_quad_2D_mp.json  swerv_wrapper_2D_mp.json  tinyRocket_2D_mp.json
Place-3D/test/or_2D_stage2/: ariane133_2D.json  ariane136_2D.json  bp_2D.json  bp_be_2D.json  bp_fe_2D.json  bp_multi_2D.json  bp_quad_2D.json  swerv_wrapper_2D.json  tinyRocket_2D.json
Place-3D/test/or_3D/: ariane133_3D.json  ariane136_3D.json  bp_3D.json  bp_be_3D.json  bp_fe_3D.json  bp_multi_3D.json  bp_quad_3D.json  swerv_wrapper_3D.json  tinyRocket_3D.json
Place-3D/test/or_3D_tiling/: ariane133_3D.json  ariane136_3D.json  bp_3D.json  bp_be_3D.json  bp_fe_3D.json  bp_multi_3D.json  bp_quad_3D.json  swerv_wrapper_3D.json  tinyRocket_3D.json
(+17 files in other folders)
